--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+#### VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
