Added .vscode/ to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ crashlytics-build.properties
 fabric.properties
 
 #### VS Code
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
